<resources>
    <string name="app_name">CinemaSearcher</string>
    <string name="first_button">Kotlin button</string>
    <string name="Main_page_now_playing">Now Playing</string>
    <string name="Main_page_upcoming">Upcoming</string>
    <string name="error">Error</string>

    //For test xml
    <string name="test_title">Cruella</string>
    <string name="test_year">2021</string>
    <string name="test_rank">7.9</string>
    <string name="test_overview">In 1970s London amidst the punk rock revolution, a young grifter named Estella is determined to make a name for herself with her designs. She befriends a pair of young thieves who appreciate her appetite for mischief, and together they are able to build a life for themselves on the London streets. One day, Estella’s flair for fashion catches the eye of the Baroness von Hellman, a fashion legend who is devastatingly chic and terrifyingly haute. But their relationship sets in motion a course of events and revelations that will cause Estella to embrace her wicked side and become the raucous, fashionable and revenge-bent Cruella.In 1970s London amidst the punk rock revolution, a young grifter named Estella is determined to make a name for herself with her designs. She befriends a pair of young thieves who appreciate her appetite for mischief, and together they are able to build a life for themselves on the London streets. One day, Estella’s flair for fashion catches the eye of the Baroness von Hellman, a fashion legend who is devastatingly chic and terrifyingly haute. But their relationship sets in motion a course of events and revelations that will cause Estella to embrace her wicked side and become the raucous, fashionable and revenge-bent Cruella.</string>
    <string name="card_budget">Budget: </string>
    <string name="card_revenue">Revenue: </string>
    <string name="test_budget">20000000</string>
    <string name="test_revenue">777000000</string>

    //For bottom navigation menu
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_history">History</string>
    <string name="menu_login">Login</string>

    //Settings page
    <string name="adult_switch">Adult content</string>
    <string name="history_delete_button">Delete all history</string>
    <string name="contacts">Contacts</string>
    <string name="menu_contacts">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">+76665554433</string>
    <string name="contacts_info">Hello, My name is Artem. I am study for Android developer. This is one of my first projects. You can call me by phone(this number is not in service)</string>
    <string name="history_search_button">Search</string>

    //Location Lesson 10
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="default_address">Калуга</string>
    <string name="button_search_map">Поиск</string>

</resources>