<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/test_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/test_banner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/test_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/test_poster"
            app:layout_constraintTop_toBottomOf="@id/test_banner"
            app:layout_constraintHorizontal_bias="0"
            app:layout_goneMarginEnd="16dp"
            app:layout_constrainedWidth="true"
            android:textSize="30sp"
            android:text="@string/test_title"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/test_poster"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/test_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/test_banner"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/test_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/test_year"
            app:layout_constraintTop_toBottomOf="@id/test_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/test_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/test_rank"
            android:button="@drawable/custom_checkbox"
            app:layout_constraintBaseline_toBaselineOf="@id/test_year" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/test_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@id/test_poster"
            app:layout_constraintBaseline_toBaselineOf="@id/test_year"
            android:text="@string/test_rank"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/test_title_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="test_title, test_poster,test_title,test_year,test_rank,test_favorite" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/test_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/test_overview"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/test_title_bottom_barrier"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>